# boundary-daemon

./: .coveragerc  .gitignore  AGENTIC_SECURITY_AUDIT.md  API_CONTRACTS.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  CHANGELOG.md  CONCEPT_EXECUTION_EVALUATION.md  CONTRIBUTING.md  EVALUATION_REPORT.md  Future-Feature-framework.md  INTEGRATION.md  PLAN.implementation.md  PLAN.md  PLAN.remediation.md  README.md  ROADMAP.md  SCOPE_REDUCTION.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_POLICY.md  SPEC.md  Spec_1.1.md  USER_GUIDE.md  VIBE_CHECK_REPORT.md  authctl  boundaryctl  build.bat  build.py  build.sh  cluster_demo.py  git-update.bat  policy_ctl  requirements.txt  run_daemon.py  setup.py  test_bypass_vulnerability.py  test_tui.py  verify_signatures
api/: boundary_api.py
benchmarks/: __init__.py  bench_event_logger.py  bench_policy_engine.py  bench_tripwires.py  run_benchmarks.py
boundary-antivirus/: README.md  setup.py
boundary-tui/: README.md  pyproject.toml
boundary-tui/boundary_tui/: __init__.py  client.py  colors.py  dashboard.py  models.py  protocol.py
boundary-tui/tests/: __init__.py  test_boundary_tui.py
config/: enforcement.conf
daemon/: __init__.py  boundary_daemon.py  constants.py  dreaming.py  event_logger.py  features.py  health_monitor.py  integrations.py  logging_config.py  memory_monitor.py  monitoring_report.py  operator_observability.py  policy_engine.py  policy_language.py  privilege_manager.py  queue_monitor.py  redundant_event_logger.py  resource_monitor.py  signed_event_logger.py  state_monitor.py  tray.py  tripwires.py
docs/: DEVELOPER_GUIDE.md  FEATURE_ROADMAP.md  SECURITY_COMPARISON.md  SELF_KNOWLEDGE.md
integrations/: INTEGRATION_GUIDE.md  README.md  security_integration_check.py
scripts/: enforcement-status.py  setup-phase1-enforcement.sh  setup-phase2-ebpf.sh  setup-phase3-watchdog.sh  setup-phase4-mac.sh  setup-phase5-verify.sh  smoke-test.sh
systemd/: boundary-daemon.service
tests/: conftest.py  test_api_auth.py  test_api_response.py  test_append_only.py  test_constants.py  (+17 more)
(+170 files in other folders)
