[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-tui"
version = "1.0.0"
description = "Terminal User Interface for Boundary Daemon - Cyberpunk dashboard with real-time monitoring"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Boundary Daemon Team"}
]
keywords = ["tui", "dashboard", "terminal", "curses", "monitoring", "cyberpunk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]

dependencies = [
    "windows-curses; sys_platform == 'win32' and python_version < '3.13'",
]

[project.optional-dependencies]
audio = ["pyttsx3>=2.90"]
ai = ["ollama>=0.1.0"]
full = ["pyttsx3>=2.90", "ollama>=0.1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.scripts]
boundary-tui = "boundary_tui.dashboard:main"

[project.urls]
Homepage = "https://github.com/kase1111-hash/boundary-daemon"
Documentation = "https://github.com/kase1111-hash/boundary-daemon/tree/main/boundary-tui"
Repository = "https://github.com/kase1111-hash/boundary-daemon"

[tool.setuptools.packages.find]
where = ["."]
include = ["boundary_tui*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
